creacion de tag
* arreglos para zoom de una tag en app
* correjido error cuando un usuario no ha subido imagen

--- a/app_root/css/newV2.css
+++ b/app_root/css/newV2.css
@@ -236,8 +236,7 @@ input.ui-input-text, textarea.ui-input-text{
 }
 img#backgroundImage{
 	height: auto;
-	width: 20.3125em;
-	max-width: 650px;
+	width: 100%;
 }
 .inputs-tag{
 	position: absolute;
