color login box

--- a/app_root/css/newV2.css
+++ b/app_root/css/newV2.css
@@ -1205,6 +1205,7 @@ li.userInList h3{
 }
 
 #page-login div.ui-btn-up-f,
+#page-login div.ui-btn-hover-f,
 #page-login #btn-login{
 	background-color: #EB5A28;
 	color: #FFF;
