--- a/app_root/css/newV2.css
+++ b/app_root/css/newV2.css
@@ -361,6 +361,12 @@ img#backgroundImage{
 	-webkit-background-size: 30%;
 	background-size: 30%;
 }
+#privacy-options .video-icon{
+	background: url('smt/Video.png') no-repeat center center;
+  	height: 54px;
+  	border-radius: 30px;
+  	display: none;
+}
 
 #privacy-options li label.ui-btn-up-c,#privacy-options li label.ui-btn-hover-c{
 	background-image: none;
@@ -460,7 +466,7 @@ img#backgroundImage{
 	background-position:top center;
 	width:100%;
 	height:100%;
-	margin:0;;
+	margin:0;
 }
 .tag-container [tag] .other-options div>div{
 	color: white;
@@ -2618,7 +2624,7 @@ li.userInList h3{
 	height: 15px;
 	background-image: url('newdesign/arrow_single_white.png');
 	background-size: 30%;
-	background-repeat: no-repeat;;
+	background-repeat: no-repeat;
 	background-position: center;
 }
 #cate-dialog ul li ul{ display: none; }
